# scuba

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.agents/skills/engineering-standards/: SKILL.md
.agents/skills/git-commit/: SKILL.md
.agents/workflows/: add-unit-tests.md  commit.md  pr.md
.skills/git-commit/: SKILL.md
.skills/git-commit/scripts/: commit_helper.py  make_commit.py
apps/backend/: main.py
apps/backend/core/: __init__.py  indexer.py
apps/backend/python/: main.py  pyproject.toml
apps/backend/python/core/: indexer.py
apps/frontend/: index.html
apps/frontend/app/: globals.css  page.module.css  page.tsx
apps/frontend/app/components/: BackendStatus.tsx  GlassButton.module.css  GlassButton.tsx  GlassCard.module.css  GlassCard.tsx  GlassInput.module.css  GlassInput.tsx
core/: extractor.py  indexer.py  storage.py  traverser.py
docs/: PRD.md  scuba-agent-explainer.html
scripts/: status.py
test_data/folder1/: file2.json
