[tool.poetry]
name = "file-indexer"
version = "0.1.0"
description = "A Python file indexer with traverser, extractor, indexer, and storage components."
authors = ["Anurag <31320.anurag@gmail.com>"]
license = "MIT"
packages = [{include = "apps"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
